Issue #DV-25: Replaced harcoded z-index with z-index variable, fixed positioning after removal of double overflow on html and body

--- a/themes/nyiaarhus/scss/base/_base.scss
+++ b/themes/nyiaarhus/scss/base/_base.scss
@@ -7,11 +7,6 @@
  */
 
 
-// Make sure the user cant scroll sideways.
-body, html {
-  overflow-x: hidden;
-}
-
 html {
   height: 100%;
 }
@@ -24,6 +19,7 @@ body {
   font: $font;
   height: 100%;
   margin: 0;
+  overflow-x: hidden;
   position: relative;
   width: 100%;
 }
