--- a/themes/nyiaarhus/scss/modules/_itk_admin_links.scss
+++ b/themes/nyiaarhus/scss/modules/_itk_admin_links.scss
@@ -8,20 +8,19 @@
   &--overlay {
     background-color: $white;
     bottom: 0;
+    cursor: pointer;
     left: 0;
     opacity: 0;
     position: fixed;
     right: 0;
     top: 0;
-
-    transition: opacity .4s;
+    transition: opacity .25s;
     transition-timing-function: ease-in-out;
-
     z-index: -1;
 
     &.is-visible {
       opacity: .8;
-      z-index: 80;
+      z-index: z($z-index-elements, admin-links-overlay);
     }
   }
 
@@ -35,13 +34,13 @@
     display: block;
     height: 3.5em;
     position: fixed;
-    right: 2em;
+    right: 3.5em;
 
     transition: transform .4s;
     transition-timing-function: ease-in-out;
 
     width: 3.5em;
-    z-index: 81;
+    z-index: z($z-index-elements, admin-links);
 
     &.is-open {
       transform: rotate(90deg);
@@ -56,13 +55,13 @@
     margin: 0;
     padding: 0;
     position: fixed;
-    right: 6.5em;
-    transition: bottom .4s;
+    right: 8em;
+    transition: bottom .25s;
     transition-timing-function: ease-in-out;
-    z-index: 81;
+    z-index: z($z-index-elements, admin-links);
 
     &.is-open {
-      bottom: 2.2em;
+      bottom: 2em;
     }
   }
 
